# onto_agent

onto_agent/: CMakeLists.txt  README.md  package.xml
onto_agent/launch/: kr_test.launch  onto_agent.launch  onto_agent.prereqs.launch
onto_agent/prolog/: init.pl
onto_agent/src/: Activity.hpp  Agent.cpp  Agent.hpp  Constants.hpp  Graph.hpp  MindState.hpp  Ontology.cpp  Ontology.hpp  main.cpp  utils.hpp
onto_agent/src/test/: graph_test.cpp  graph_update_test.cpp  tests.cpp
ontology_msgs/: CMakeLists.txt  README.md  package.xml
ontology_svcs/: CMakeLists.txt  README.md  package.xml
ontology_svcs/srv/: AssertClass.srv  DisplayLabel.srv  GetActivities.srv  GetActivity.srv  GetActivityGraph.srv  GetAllClassInstances.srv  GetAllClassInstancesWithPoses.srv  GetTaskGraph.srv  InstructBehavior.srv  PerformTask.srv  RelabelActivity.srv  RelabelObject.srv  SaveLog.srv
